fix(arc-718): adjust z-index

--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -1,6 +1,8 @@
 @use "../abstracts" as *;
 
 :root {
+	--toastify-z-index: get-z-layer("blade") - 1;
+
 	font-size: 62.5%;
 }
 
